syntax = "proto3";

package org.covid19.api;

option java_multiple_files = true;
option java_outer_classname = "CaseInterfaceProto";

import "google/protobuf/timestamp.proto";

import "common.proto";
import "geo.def.proto";

// CaseState describes state of the case
enum CaseState {
    UNKNOWN = 0;
    UNDISCLOSED = 1;

    CONFIRMED = 11;
    RECOVERED = 12;
    DEATH = 13;
}

// InfectionSource describes source of the infection
enum InfectionSource {
    DOMESTIC = 0;
    INTL_IMPORTED = 1;
    SHIP_IMPORTED = 2;
}

// ExistingCaseDetail describes an existing (exists in DB) case
message ExistingCaseDetail {
    string case_uuid = 1; // Case UUID to be referenced internally
    string patient_id = 2; // Anonymous patient identifier
    google.protobuf.Timestamp reported_time = 3; // Reported timestamp

    CaseState state = 11; // Case state
    InfectionSource infect_src = 12; // Source of infection

    oneof location {
        CityLocation location_by_city = 21;
        GPSLocation location_by_gps = 22;
    }
}

// NewCaseDetail describes a new (not exists in DB) case
message NewCaseDetail {
    string patient_id = 2; // Anonymous patient identifier
    google.protobuf.Timestamp reported_time = 3; // Reported timestamp

    CaseState state = 11; // Case state
    InfectionSource infect_src = 12; // Source of infection

    oneof location {
        CityLocation location_by_city = 21;
        GPSLocation location_by_gps = 22;
    }
}

// GetCasesRequest describes request payload for querying cases match specific criteria
message GetCasesRequest {
    oneof location {
        CityLocation location_by_city = 1;
        GPSLocation location_by_gps = 2;
    }

    repeated CaseState states = 11; // Case states

    google.protobuf.Timestamp start_time = 21; // Start Unix timestamp
    google.protobuf.Timestamp end_time = 22; // End Unix timestamp
}

// GetCasesResponse describes response payload for matched cases
message GetCasesResponse {
    Pagination pagination = 1;

    repeated ExistingCaseDetail cases = 11;
}

// AddCasesRequest describes request payload for adding cases
message AddCasesRequest {
    repeated NewCaseDetail cases = 1;
}

// PutCasesRequest describes request payload for updating existing cases
message PutCasesRequest {
    repeated ExistingCaseDetail cases = 1;
}

// DelCasesRequest describes request payload for deleting existing cases
message DelCasesRequest {
    repeated string case_uuids = 1;
}
